# PythonWorks

./: README.md  pyproject.toml  python_lists_1.py  pyvenv.cfg
Scripts/: activate  activate.bat
